--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
 SESSION_SECRET=super session secret
 HTTP_SERVER_DOMAIN=kanbas-node-server-app.onrender.com
-DB_CONNECTION_STRING=mongodb+srv://seongd:Molke369123@cluster0.p6damo0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_CONNECTION_STRING=mongodb+srv://seongd:Molke369123@cluster0.p6damo0.mongodb.net/Stuff?retryWrites=true&w=majority&appName=Cluster0
